@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2004/04/02 11:52:45 jmmv Exp $
+@comment $NetBSD: PLIST,v 1.2 2004/06/21 20:24:55 xtraeme Exp $
 lib/gtk-2.0/2.4.0/engines/libindustrial.a
 lib/gtk-2.0/2.4.0/engines/libindustrial.la
 lib/gtk-2.0/2.4.0/engines/libindustrial.so
@@ -11,17 +11,20 @@ share/icons/Amaranth/scalable/apps/accessibility-keyboard-capplet.svg
 share/icons/Amaranth/scalable/apps/accessories.svg
 share/icons/Amaranth/scalable/apps/advanced-directory.svg
 share/icons/Amaranth/scalable/apps/apacheconf.svg
+share/icons/Amaranth/scalable/apps/blender.svg
 share/icons/Amaranth/scalable/apps/camera.svg
 share/icons/Amaranth/scalable/apps/disks.svg
 share/icons/Amaranth/scalable/apps/downloadmanager.svg
 share/icons/Amaranth/scalable/apps/email.svg
 share/icons/Amaranth/scalable/apps/evolution-1.4.svg
 share/icons/Amaranth/scalable/apps/evolution.svg
+share/icons/Amaranth/scalable/apps/file-manager.svg
 share/icons/Amaranth/scalable/apps/file-roller.svg
 share/icons/Amaranth/scalable/apps/gaim.svg
 share/icons/Amaranth/scalable/apps/gcalctool.svg
 share/icons/Amaranth/scalable/apps/gedit-icon.svg
 share/icons/Amaranth/scalable/apps/gedit.svg
+share/icons/Amaranth/scalable/apps/gftp.svg
 share/icons/Amaranth/scalable/apps/gimp.svg
 share/icons/Amaranth/scalable/apps/gnome-aisleriot.svg
 share/icons/Amaranth/scalable/apps/gnome-applications.svg
@@ -48,21 +51,10 @@ share/icons/Amaranth/scalable/apps/gnome-mouse.svg
 share/icons/Amaranth/scalable/apps/gnome-multimedia.svg
 share/icons/Amaranth/scalable/apps/gnome-palette.svg
 share/icons/Amaranth/scalable/apps/gnome-pdf.svg
-share/icons/Amaranth/scalable/apps/gnome-settings.svg
 share/icons/Amaranth/scalable/apps/gnome-starthere.svg
-share/icons/Amaranth/scalable/apps/gnome-terminal.svg
-share/icons/Amaranth/scalable/apps/gnumeric.svg
 share/icons/Amaranth/scalable/apps/gripicon.svg
-share/icons/Amaranth/scalable/apps/gucharmap.svg
-share/icons/Amaranth/scalable/apps/icon-system-tools.svg
-share/icons/Amaranth/scalable/apps/monitor.svg
-share/icons/Amaranth/scalable/apps/mouse-capplet.svg
-share/icons/Amaranth/scalable/apps/mozilla-icon.svg
 share/icons/Amaranth/scalable/apps/mozilla-mail-icon.svg
 share/icons/Amaranth/scalable/apps/mozilla-star.svg
-share/icons/Amaranth/scalable/apps/my-computer.svg
-share/icons/Amaranth/scalable/apps/netscape.svg
-share/icons/Amaranth/scalable/apps/opera.svg
 share/icons/Amaranth/scalable/apps/redhat-accessories.svg
 share/icons/Amaranth/scalable/apps/redhat-config-xfree86.svg
 share/icons/Amaranth/scalable/apps/redhat-email.svg
@@ -78,15 +70,9 @@ share/icons/Amaranth/scalable/apps/redhat-sound_video.svg
 share/icons/Amaranth/scalable/apps/redhat-system_settings.svg
 share/icons/Amaranth/scalable/apps/redhat-system_tools.svg
 share/icons/Amaranth/scalable/apps/redhat-web-browser.svg
-share/icons/Amaranth/scalable/apps/sambaconf.svg
-share/icons/Amaranth/scalable/apps/seti.svg
-share/icons/Amaranth/scalable/apps/sound-juicer.svg
-share/icons/Amaranth/scalable/apps/system-floppy.svg
 share/icons/Amaranth/scalable/apps/system-tools-32.svg
-share/icons/Amaranth/scalable/apps/tex.svg
 share/icons/Amaranth/scalable/apps/up2date.svg
 share/icons/Amaranth/scalable/apps/web-browser.svg
-share/icons/Amaranth/scalable/apps/xmms.svg
 share/icons/Amaranth/scalable/apps/xpdf.svg
 share/icons/Amaranth/scalable/devices/gnome-dev-cdrom-audio.svg
 share/icons/Amaranth/scalable/devices/gnome-dev-cdrom.svg
@@ -123,7 +109,9 @@ share/icons/Amaranth/scalable/filesystems/gnome-fs-directory.svg
 share/icons/Amaranth/scalable/filesystems/gnome-fs-executable.svg
 share/icons/Amaranth/scalable/filesystems/gnome-fs-home.svg
 share/icons/Amaranth/scalable/filesystems/gnome-fs-loading-icon.svg
+share/icons/Amaranth/scalable/filesystems/gnome-fs-network.svg
 share/icons/Amaranth/scalable/filesystems/gnome-fs-regular.svg
+share/icons/Amaranth/scalable/filesystems/gnome-fs-server.svg
 share/icons/Amaranth/scalable/filesystems/gnome-fs-smb.svg
 share/icons/Amaranth/scalable/filesystems/gnome-fs-trash-empty.svg
 share/icons/Amaranth/scalable/filesystems/gnome-fs-trash-full.svg
@@ -184,6 +172,7 @@ share/icons/Amaranth/scalable/stock/stock_redo.svg
 share/icons/Amaranth/scalable/stock/stock_refresh.svg
 share/icons/Amaranth/scalable/stock/stock_replace.svg
 share/icons/Amaranth/scalable/stock/stock_reset.svg
+share/icons/Amaranth/scalable/stock/stock_save_as.svg
 share/icons/Amaranth/scalable/stock/stock_screenshot.svg
 share/icons/Amaranth/scalable/stock/stock_search.svg
 share/icons/Amaranth/scalable/stock/stock_stop.svg
@@ -527,6 +516,8 @@ share/icons/Nuvola/scalable/apps/evolution-1.4.svg
 share/icons/Nuvola/scalable/apps/gaim.svg
 share/icons/Nuvola/scalable/apps/gcalctool.svg
 share/icons/Nuvola/scalable/apps/gdict.svg
+share/icons/Nuvola/scalable/apps/gedit-icon.svg
+share/icons/Nuvola/scalable/apps/gedit.svg
 share/icons/Nuvola/scalable/apps/gnome-applications.svg
 share/icons/Nuvola/scalable/apps/gnome-audio.svg
 share/icons/Nuvola/scalable/apps/gnome-ccdesktop.svg
@@ -592,6 +583,7 @@ share/icons/Nuvola/scalable/devices/gnome-dev-floppy.svg
 share/icons/Nuvola/scalable/devices/gnome-dev-harddisk.svg
 share/icons/Nuvola/scalable/devices/gnome-dev-mouse.svg
 share/icons/Nuvola/scalable/devices/gnome-dev-network.svg
+share/icons/Nuvola/scalable/devices/gnome-dev-printer.svg
 share/icons/Nuvola/scalable/devices/gnome-dev-scanner.svg
 share/icons/Nuvola/scalable/devices/gnome-dev-symlink.svg
 share/icons/Nuvola/scalable/devices/gnome-dev-zipdisk.svg
@@ -619,8 +611,11 @@ share/icons/Nuvola/scalable/filesystems/gnome-fs-blockdev.svg
 share/icons/Nuvola/scalable/filesystems/gnome-fs-bookmark-missing.svg
 share/icons/Nuvola/scalable/filesystems/gnome-fs-bookmark.svg
 share/icons/Nuvola/scalable/filesystems/gnome-fs-chardev.svg
+share/icons/Nuvola/scalable/filesystems/gnome-fs-client.svg
+share/icons/Nuvola/scalable/filesystems/gnome-fs-desktop.svg
 share/icons/Nuvola/scalable/filesystems/gnome-fs-directory-accept.icon
 share/icons/Nuvola/scalable/filesystems/gnome-fs-directory-accept.svg
+share/icons/Nuvola/scalable/filesystems/gnome-fs-directory-visiting.svg
 share/icons/Nuvola/scalable/filesystems/gnome-fs-directory.icon
 share/icons/Nuvola/scalable/filesystems/gnome-fs-directory.svg
 share/icons/Nuvola/scalable/filesystems/gnome-fs-executable.svg
@@ -643,38 +638,59 @@ share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-pgp-encrypted.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-pgp.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-postscript.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-text.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-vnd.ms-excel.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-vnd.rn-realmedia.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-vnd.sun.xml.calc.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-vnd.sun.xml.draw.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-vnd.sun.xml.impress.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-vnd.sun.xml.writer.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-abiword.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-backup.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-core-file.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-deb.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-dvi.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-executable-binary.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-font-afm.svg
-share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-font-linux-psf.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-font-bdf.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-font-pcf.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-font-psf.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-font-ttf.svg
-share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-font-type1.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-font.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-gnome-app-info.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-gnumeric.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-iso-image.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-jar.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-killustrator.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-kpresenter.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-kspread.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-kword.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-ogg.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-rpm.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-stuffit.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-tex.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-application-x-tgz.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-audio-x-midi.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-audio-x-pn-realaudio.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-audio.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-image-svg.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-image-x-cdr.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-image-xcf.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-image.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-css.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-html.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-c.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-credits.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-install.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-java.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-lyx.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-makefile.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-patch.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-readme.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-sh.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-sql.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-text-x-troff-man.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-text.svg
+share/icons/Nuvola/scalable/mimetypes/gnome-mime-video-quicktime.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-video.svg
 share/icons/Nuvola/scalable/mimetypes/gnome-mime-x-readme.svg
 share/icons/Nuvola/scalable/stock/applets-screenshooter.svg
@@ -735,6 +751,7 @@ share/icons/Wasp/scalable/apps/advanced-directory.svg
 share/icons/Wasp/scalable/apps/applets-screenshooter.svg
 share/icons/Wasp/scalable/apps/background-capplet.svg
 share/icons/Wasp/scalable/apps/bluefish.svg
+share/icons/Wasp/scalable/apps/control-center2.svg
 share/icons/Wasp/scalable/apps/evolution-1.4.svg
 share/icons/Wasp/scalable/apps/file-manager.svg
 share/icons/Wasp/scalable/apps/file-roller.svg
@@ -767,6 +784,7 @@ share/icons/Wasp/scalable/apps/gnome-printers-properties.svg
 share/icons/Wasp/scalable/apps/gnome-terminal.svg
 share/icons/Wasp/scalable/apps/gnome-util.svg
 share/icons/Wasp/scalable/apps/gnumeric.svg
+share/icons/Wasp/scalable/apps/hwbrowser.svg
 share/icons/Wasp/scalable/apps/keyboard-capplet.svg
 share/icons/Wasp/scalable/apps/keyboard-shortcut.svg
 share/icons/Wasp/scalable/apps/keyboard.svg
@@ -780,6 +798,7 @@ share/icons/Wasp/scalable/apps/procman.svg
 share/icons/Wasp/scalable/apps/redhat-config-date.svg
 share/icons/Wasp/scalable/apps/redhat-config-users.svg
 share/icons/Wasp/scalable/apps/redhat-config-xfree86.svg
+share/icons/Wasp/scalable/apps/redhat-email.svg
 share/icons/Wasp/scalable/apps/redhat-games.svg
 share/icons/Wasp/scalable/apps/redhat-home.svg
 share/icons/Wasp/scalable/apps/redhat-internet.svg
@@ -795,6 +814,7 @@ share/icons/Wasp/scalable/apps/system-tools.svg
 share/icons/Wasp/scalable/apps/user_auth.svg
 share/icons/Wasp/scalable/apps/vanity.svg
 share/icons/Wasp/scalable/apps/web-browser.svg
+share/icons/Wasp/scalable/apps/webbrowser.svg
 share/icons/Wasp/scalable/apps/ximian-evolution-calendar.svg
 share/icons/Wasp/scalable/apps/ximian-redhat-config-nfs.svg
 share/icons/Wasp/scalable/apps/xmms.svg
@@ -817,6 +837,7 @@ share/icons/Wasp/scalable/devices/gnome-dev-zipdisk.svg
 share/icons/Wasp/scalable/emblems/emblem-camera.svg
 share/icons/Wasp/scalable/emblems/emblem-cool.svg
 share/icons/Wasp/scalable/emblems/emblem-danger.svg
+share/icons/Wasp/scalable/emblems/emblem-desktop.svg
 share/icons/Wasp/scalable/emblems/emblem-distinguished.svg
 share/icons/Wasp/scalable/emblems/emblem-documents.svg
 share/icons/Wasp/scalable/emblems/emblem-favorite.svg
@@ -915,28 +936,34 @@ share/icons/Wasp/scalable/stock/stock_lockscreen.svg
 share/icons/Wasp/scalable/stock/stock_logout.svg
 share/icons/Wasp/scalable/stock/stock_multimedia.svg
 share/icons/Wasp/scalable/stock/stock_searchtool.svg
-${PKGLOCALEDIR}/locale/az/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/ca/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/cs/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/da/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/de/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/el/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/es/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/fr/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/he/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/ja/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/ko/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/nl/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/no/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/pl/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/pt/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/sk/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/sr/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/sr@Latn/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/sv/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/tr/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/zh_CN/LC_MESSAGES/gnome-themes-extra.mo
-${PKGLOCALEDIR}/locale/zh_TW/LC_MESSAGES/gnome-themes-extra.mo
+${PKGLOCALEDIR}/locale/az/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/ca/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/cs/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/da/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/de/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/el/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/en_GB/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/es/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/fr/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/he/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/hr/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/it/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/ja/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/ko/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/lt/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/nl/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/no/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/pa/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/pl/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/pt/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/sk/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/sq/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/sr/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/sr@Latn/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/sv/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/tr/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/zh_CN/LC_MESSAGES/gnome-themes-extras.mo
+${PKGLOCALEDIR}/locale/zh_TW/LC_MESSAGES/gnome-themes-extras.mo
 share/themes/Amaranth/gtk-2.0/gtkrc
 share/themes/Amaranth/gtk-2.0/iconrc
 share/themes/Amaranth/index.theme
